# Prog1-nyilvantartas-NHF

./: .gitignore  CMakeLists.txt  README.md  fejlesztői dokumentáció.odt  felhasználói dokumentáció.odt  nagyhzspec.odt
data/: students.csv  teachers.csv
include/: adatkezeles.h  fajlkezeles.h  menuElemek.h  strukturak.h
src/: adatkezeles.c  debugmalloc.h  fajlkezeles.c  main.c  menuElemek.c
